app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testapp
        pathType: ImplementationSpecific 
        backend:
          service:
            name: testapp-service
            port: 
              number: 3000
